feat(register): make PATCH, GET /api/user and Authentication with Bearer
