# domain/token_response.go
@@ -1,0 +1,7 @@
+package domain
+
+type TokenResponse struct {
+	UserID       string `json:"userId"`
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
