# handler/user_handler.go
@@ -23,7 +23,7 @@ func NewUserHandler(usecase *usecase.UserUsecase) *UserHandler {
 // @Produce  json
 // @Security BearerAuth
 // @Param user body domain.User true "User data"
-// @Success 201 {object} domain.User
+// @Success 201 {object} domain.TokenResponse
 // @Failure 400 {object} domain.ErrorResponse "Invalid input"
 // @Failure 401 {object} domain.ErrorResponse "Unauthorized"
 // @Failure 500 {object} domain.ErrorResponse "Failed to create user"
@@ -33,10 +33,13 @@ func (h *UserHandler) Register(c *fiber.Ctx) error {
 	if err := c.BodyParser(user); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(domain.ErrorResponse{Error: "Invalid input"})
 	}
-	if err := h.Usecase.Register(user); err != nil {
+
+	tokenResponse, err := h.Usecase.Register(user)
+	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(domain.ErrorResponse{Error: "Failed to create user"})
 	}
-	return c.Status(fiber.StatusCreated).JSON(user)
+
+	return c.Status(fiber.StatusCreated).JSON(tokenResponse)
 }
 
 // GetAll godoc
@@ -52,4 +55,49 @@ func (h *UserHandler) GetAll(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusInternalServerError).JSON(domain.ErrorResponse{Error: "Failed to fetch users"})
 	}
 	return c.Status(fiber.StatusOK).JSON(users)
+}
+
+// GetById godoc
+// @Summary Get user by ID
+// @Description Retrieve a user by its ID
+// @Produce  json
+// @Param id path string true "User ID"
+// @Success 200 {object} domain.User
+// @Failure 404 {object} domain.ErrorResponse "User not found"
+// @Failure 500 {object} domain.ErrorResponse "Failed to fetch user"
+// @Router /api/users/{id} [get]
+func (h *UserHandler) GetById(c *fiber.Ctx) error {
+	id := c.Params("id")
+	user, err := h.Usecase.GetById(id)
+	if err != nil {
+		return c.Status(fiber.StatusNotFound).JSON(domain.ErrorResponse{Error: "User not found"})
+	}
+	return c.Status(fiber.StatusOK).JSON(user)
+}
+
+// Update godoc
+// @Summary Update user by ID
+// @Description Update a user by its ID
+// @Accept  json
+// @Produce  json
+// @Security BearerAuth
+// @Param id path string true "User ID"
+// @Param user body domain.User true "User data"
+// @Success 204
+// @Failure 400 {object} domain.ErrorResponse "Invalid input"
+// @Failure 401 {object} domain.ErrorResponse "Unauthorized"
+// @Failure 404 {object} domain.ErrorResponse "User not found"
+// @Failure 500 {object} domain.ErrorResponse "Failed to update user"
+// @Router /api/users/{id} [patch]
+func (h *UserHandler) Update(c *fiber.Ctx) error {
+	id := c.Params("id")
+	user := new(domain.User)
+	if err := c.BodyParser(user); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(domain.ErrorResponse{Error: "Invalid input"})
+	}
+	if err := h.Usecase.Update(id, user); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(domain.ErrorResponse{Error: "Failed to update user"})
+	}
+
+	return c.SendStatus(fiber.StatusNoContent)
 }
